2009-01-10 21:43 -0800  Brendan Cully  <brendan@kublai.com>  (aa069968e4d5)

	* imap/util.c: Guard against NULL pointers in imap_mxcmp

	* imap/imap_private.h, imap/util.c: Canonicalize IMAP mailboxes before
	comparing them.

	* imap/util.c: Fix last commit

	* imap/util.c: Prioritize the entered IMAP folder delimiter. First
	priority is the connection delimiter. Second priority is the user's
	delimiter if it is in imap_delim_chars. We no longer use the first
	character in imap_delim_chars.

2009-01-06 18:34 -0800  Vsevolod Volkov  <vvv@mutt.org.ua>  (4032dfd52118)

	* po/ru.po: Updated Russian translation

2009-01-05 16:43 -0800  Brendan Cully  <brendan@kublai.com>  (0d81ef9d40fd)

	* build-release: Sign tagged revision, not the one after

	* .hgsigs: mutt-1.5.19 signed

	* .hgtags: Added tag mutt-1-5-19-rel for changeset a4b47ac32d32

	* VERSION, po/bg.po, po/ca.po, po/cs.po, po/da.po, po/de.po,
	po/el.po, po/eo.po, po/es.po, po/et.po, po/eu.po, po/fr.po,
	po/ga.po, po/gl.po, po/hu.po, po/id.po, po/it.po, po/ja.po,
	po/ko.po, po/lt.po, po/nl.po, po/pl.po, po/pt_BR.po, po/ru.po,
	po/sk.po, po/sv.po, po/tr.po, po/uk.po, po/zh_CN.po, po/zh_TW.po:
	automatic post-release commit for mutt-1.5.19

	* build-release: Fall back to vi if VISUAL is unset in
	build-release

	* UPDATING: Update UPDATING

	* imap/command.c, imap/imap.c, imap/imap_private.h: Report CREATE
	failures

	* browser.c: Style fixes

	* browser.c: Leave error message on screen if imap_mailbox_create
	fails

	* doc/mutt.man: Add pointer to the full manual to the front of mutt.1

2009-01-05 09:16 -0800  Petr Písař  <petr.pisar@atlas.cz>  (990f1e841dd4)

	* po/cs.po: Updated Czech translation

2009-01-04 22:36 -0800  Vincent Lefevre  <vincent@vinc17.org>  (9af288ee9e91)

	* po/fr.po: Updated French translation

2009-01-04 18:32 -0800  Emanuele Giaquinta  <e.giaquinta@glauco.it>  (e47d05dc2633)

	* imap/util.c: Indentation fix

2009-01-04 18:12 -0800  Brendan Cully  <brendan@kublai.com>  (1947c370fcd9)
